--- a/StormWeb/Views/Document/Index.cshtml
+++ b/StormWeb/Views/Document/Index.cshtml
@@ -66,6 +66,9 @@
     </div>
     <div class="document-container" >
         <div class="box-tab">
+         <div class="page-header">
+                 <h1> &nbsp;&nbsp;Applications List </h1>
+                   </div>
             <div class="tabbable tabs-left">
                 <!-- Only required for left/right tabs -->
                 <ul class="nav nav-tabs" id="applicationsTab">
