--- a/StormWeb/Views/Payment/Index.cshtml
+++ b/StormWeb/Views/Payment/Index.cshtml
@@ -53,9 +53,10 @@ $(function () {
                     </ul>
                     <div class="tab-content">
                         <div class="tab-pane active" id="tab1">
+
                             <div class="widget-content">
                                 <div class="widget-box">
-                                    <table class="mydata-tbl-inbox table table-bordered">
+                                    <table class="data-tbl-simple table table-bordered dataTable">
                                         <thead>
                                             <tr>
                                                 <th>
@@ -139,7 +140,7 @@ $(function () {
                         <div class="tab-pane" id="tab2">
                             <div class="widget-content">
                                 <div class="widget-box">
-                                    <table class="mydata-tbl-inbox table table-bordered">
+                                      <table class="data-tbl-simple table table-bordered dataTable">
                                       <thead>
                                             <tr>
                                                 <th>
