--- a/StormWeb/Views/Staff/Create.cshtml
+++ b/StormWeb/Views/Staff/Create.cshtml
@@ -3,8 +3,6 @@
     ViewBag.Title = "Create";
 }
 @using StormWeb.Helper
-<h2>
-    Create</h2>
 <script type="text/javascript">
     $(function () {
          $("#errorMessages").dialog({
@@ -43,16 +41,184 @@
     @Html.ValidationSummary(false, null, new { @class = "error" })
  
     @Html.HiddenFor(x => x.Staff_Id)
-    <table style="text-align: left;">
+
+    <div class="form-horizontal well">
+        <fieldset style="margin-left: 50px;">
+            <legend>
+                <h2>
+                    Create New Staff</h2>
+            </legend>
+            <div class="control-group">
+                @Html.Label("Department", null, new { @class = "control-label form-required" })
+                <div class="controls">
+                    @Html.DropDownListFor(model => model.Dept_Id, (IEnumerable<SelectListItem>)ViewBag.Dept_Id, "--Select--", new { @class = "chzn-select" })
+                    <p class="help-block">
+                        @Html.ValidationMessageFor(model => model.Dept_Id)
+                    </p>
+                </div>
+            </div>
+            <div class="control-group">
+                @Html.Label(" Street Name and Number", null, new { @class = "control-label form-required", style = "width:200px;margin-left: -50px;" })
+                <div class="controls">
+                    @Html.TextBoxFor(model => model.Address.Address_Name, new { @class = "input-large text-tip", placeholder = " Street Name and Number" })
+                    <p class="help-block">
+                        @Html.ValidationMessageFor(model => model.Address.Address_Name)
+                    </p>
+                </div>
+            </div>
+            <div class="control-group">
+                @Html.Label("City", null, new { @class = "control-label form-required" })
+                <div class="controls">
+                    @Html.TextBoxFor(model => model.Address.City, new { @class = "input-large text-tip", placeholder = "City" })
+                    <p class="help-block">
+                        @Html.ValidationMessageFor(model => model.Address.City)
+                    </p>
+                </div>
+            </div>
+            <div class="control-group">
+                @Html.Label("State", null, new { @class = "control-label form-required" })
+                <div class="controls">
+                    @Html.TextBoxFor(model => model.Address.State, new { @class = "input-large text-tip", placeholder = "State" })
+                    <p class="help-block">
+                        @Html.ValidationMessageFor(model => model.Address.State)
+                    </p>
+                </div>
+            </div>
+            <div class="control-group">
+                @Html.Label("Zipcode", null, new { @class = "control-label form-required" })
+                <div class="controls">
+                    @Html.TextBoxFor(model => model.Address.Zipcode, new { @class = "input-large text-tip", placeholder = "Zipcode" })
+                    <p class="help-block">
+                        @Html.ValidationMessageFor(model => model.Address.Zipcode)
+                    </p>
+                </div>
+            </div>
+            <div class="control-group">
+                @Html.Label("Country", null, new { @class = "control-label form-required" })
+                <div class="controls">
+                    @Html.DropDownListFor(model => model.Address.Country_Id, (IEnumerable<SelectListItem>)ViewBag.CountryList, "--Select--", new { @class = "chzn-select" })
+                    <p class="help-block">
+                        @Html.ValidationMessageFor(model => model.Address.Country_Id)
+                    </p>
+                </div>
+            </div>
+            <div class="control-group">
+                @Html.Label("Title", null, new { @class = "control-label form-required" })
+                <div class="controls">
+                    @Html.DropDownListFor(model => model.Title, (IEnumerable<SelectListItem>)ViewData["TitleValue"], new { @class = "chzn-select" })
+                    <p class="help-block">
+                        @Html.ValidationMessageFor(model => model.Title)
+                    </p>
+                </div>
+            </div>
+            <div class="control-group">
+                @Html.Label("Given Name", null, new { @class = "control-label form-required" })
+                <div class="controls">
+                    @Html.TextBoxFor(model => model.FirstName, new { @class = "input-large text-tip", placeholder = "FirstName" })
+                    <p class="help-block">
+                        @Html.ValidationMessageFor(model => model.FirstName)
+                    </p>
+                </div>
+            </div>
+            <div class="control-group">
+                @Html.Label("Surname", null, new { @class = "control-label form-required" })
+                <div class="controls">
+                    @Html.TextBoxFor(model => model.LastName, new { @class = "input-large text-tip", placeholder = "Zipcode" })
+                    <p class="help-block">
+                        @Html.ValidationMessageFor(model => model.LastName)
+                    </p>
+                </div>
+            </div>
+            <div class="control-group">
+                @Html.Label("DOB", null, new { @class = "control-label form-required" })
+                <div class="controls">
+                    <div class="input-append">
+                        @Html.TextBoxFor(model => model.DOB, new { @class = "chooseDate", @readonly = "readonly", @Value = Model.DOB.ToString("dd/MM/yyyy") })
+                    </div>
+                    <p class="help-block">
+                        @Html.ValidationMessageFor(model => model.DOB)
+                    </p>
+                </div>
+            </div>
+            <div class="control-group">
+                @Html.Label("Date Of Joining", null, new { @class = "control-label form-required" })
+                <div class="controls">
+                    <div class="input-append">
+                        @Html.TextBoxFor(model => model.Date_Of_Joining, new { @class = "chooseDate1", @readonly = "readonly", @Value = Model.Date_Of_Joining.ToString("dd/MM/yyyy") })
+                    </div>
+                    <p class="help-block">
+                        @Html.ValidationMessageFor(model => model.Date_Of_Joining)
+                    </p>
+                </div>
+            </div>
+            <div class="control-group">
+                @Html.Label("Mobile Number", null, new { @class = "control-label form-required" })
+                <div class="controls">
+                    @Html.TextBoxFor(model => model.Mobile_Number, new { @class = "input-large text-tip", placeholder = "Mobile Number" })
+                    <p class="help-block">
+                        @Html.ValidationMessageFor(model => model.Mobile_Number)
+                    </p>
+                </div>
+            </div>
+            <div class="control-group">
+                @Html.Label("Email", null, new { @class = "control-label form-required" })
+                <div class="controls">
+                    @Html.TextBoxFor(model => model.Email, new { @class = "input-large text-tip", placeholder = "Email" })
+                    <p class="help-block">
+                        @Html.ValidationMessageFor(model => model.Email)
+                    </p>
+                </div>
+            </div>
+            <div class="control-group">
+                @Html.Label("Tax Type", null, new { @class = "control-label form-required" })
+                <div class="controls">
+                    @Html.TextBoxFor(model => model.Tax_Type, new { @class = "input-large text-tip", placeholder = "Tax Type" })
+                    <p class="help-block">
+                        @Html.ValidationMessageFor(model => model.Tax_Type)
+                    </p>
+                </div>
+            </div>
+            <div class="control-group">
+                @Html.Label("Tax Number", null, new { @class = "control-label form-required" })
+                <div class="controls">
+                    @Html.TextBoxFor(model => model.Tax_Number, new { @class = "input-large text-tip", placeholder = "Tax Number" })
+                    <p class="help-block">
+                        @Html.ValidationMessageFor(model => model.Tax_Number)
+                    </p>
+                </div>
+            </div>
+            <div class="control-group">
+                @Html.Label("UserName", null, new { @class = "control-label form-required" })
+                <div class="controls">
+                    @Html.TextBoxFor(model => model.UserName, new { @class = "input-large text-tip", placeholder = "UserName" })
+                    <p class="help-block">
+                        @Html.ValidationMessageFor(model => model.UserName)
+                    </p>
+                </div>
+            </div>
+            <div class="control-group">
+                <div class="controls span7">
+                    @Html.Partial("~/Views/Shared/Partial/_BranchListPartial.cshtml", (List<StormWeb.Models.Branch>)ViewBag.Branch)
+                </div>
+            </div>
+            <div class="control-group">
+                <div class="controls">
+                    <input type="submit" class="btn btn-primary" value="Create" />
+                    @Html.Button_DeleteOrCancel("Cancel", "Index")
+                </div>
+            </div>
+        </fieldset>
+    </div>
+   @* <table style="text-align: left;">
         <tr>
             <th>
                 Department
             </th>
             <td>
-              @*  @Html.DropDownList("Dept_Id", String.Empty)*@
-                @Html.DropDownListFor(model => model.Dept_Id, (IEnumerable<SelectListItem>)ViewBag.Dept_Id,"--Select--", new { @class = "chzn-select" })
-                  <p class="help-block">
-                  </p>
+               
+                @Html.DropDownListFor(model => model.Dept_Id, (IEnumerable<SelectListItem>)ViewBag.Dept_Id, "--Select--", new { @class = "chzn-select" })
+                <p class="help-block">
+                </p>
             </td>
         </tr>
         <tr>
@@ -92,7 +258,7 @@
                 Country
             </th>
             <td>
-                @Html.DropDownListFor(model => model.Address.Country_Id, (IEnumerable<SelectListItem>)ViewBag.CountryList,"--Select--", new { @class = "chzn-select" })
+                @Html.DropDownListFor(model => model.Address.Country_Id, (IEnumerable<SelectListItem>)ViewBag.CountryList, "--Select--", new { @class = "chzn-select" })
                 <p class="help-block">
                     @Html.ValidationMessageFor(model => model.Address.Country_Id)
                 </p>
@@ -169,7 +335,6 @@
                 UserName
             </th>
             <td>@Html.TextBoxFor(model => model.UserName, new { @class = "text-tip" })
-            
             </td>
         </tr>
         <tr>
@@ -181,150 +346,13 @@
         </tr>
     </table>
     <div class="pull-left">
-        <input type="submit" class="btn btn-primary" value="Create"/>
-         @Html.Button_DeleteOrCancel("Cancel","Index")
-    </div>
+        <input type="submit" class="btn btn-primary" value="Create" />
+        @Html.Button_DeleteOrCancel("Cancel", "Index")
+    </div>*@
     <br />
     <br />
     <br />
-@* <button class="btn btn-primary" type="submit" value="Create &raquo;"
-            onclick="return $('#NewStaff').validate()">
-           Save Changes
-        </button><fieldset>
-        <legend>Staff</legend>
-        <div class="row-fluid">
-            <div class="span3">
-                <div class="editor-label">
-                    @Html.LabelFor(model => model.Dept_Id, "Department")
-                </div>
-                <div class="editor-field">
-                    @Html.DropDownList("Dept_Id", String.Empty)
-                    @Html.ValidationMessageFor(model => model.Dept_Id)
-                </div>
-                <div class="control-group">
-                    @Html.Label("Street Name and Number", null, new { @class = "control-label" })
-                    <div class="controls">
-                        @Html.TextBoxFor(model => model.Address.Address_Name, new { @class = "input-xlarge text-tip", placeholder = "Street Name" })
-                        <p class="help-block">
-                            @Html.ValidationMessageFor(model => model.Address.Address_Name)
-                        </p>
-                    </div>
-                </div>
-                <div class="control-group">
-                    @Html.Label("City", null, new { @class = "control-label" })
-                    <div class="controls">
-                        @Html.TextBoxFor(model => model.Address.City, new { @class = "input-xlarge text-tip", placeholder = "City" })
-                        <p class="help-block">
-                            @Html.ValidationMessageFor(model => model.Address.City)
-                        </p>
-                    </div>
-                </div>
-                <div class="control-group">
-                    @Html.Label("State", null, new { @class = "control-label" })
-                    <div class="controls">
-                        @Html.TextBoxFor(model => model.Address.State, new { @class = "input-xlarge text-tip", placeholder = "State" })
-                        <p class="help-block">
-                            @Html.ValidationMessageFor(model => model.Address.State)
-                        </p>
-                    </div>
-                </div>
-                <div class="control-group">
-                    @Html.Label("Country", null, new { @class = "control-label" })
-                    <div class="controls">
-                        @Html.DropDownListFor(model => model.Address.Country_Id, (IEnumerable<SelectListItem>)ViewBag.CountryList, new { @class = "chzn-select" })
-                        <p class="help-block">
-                            @Html.ValidationMessageFor(model => model.Address.Country_Id)
-                        </p>
-                    </div>
-                </div>
-                <div class="control-group">
-                    @Html.Label("Zip Code", null, new { @class = "control-label" })
-                    <div class="controls">
-                        @Html.TextBoxFor(model => model.Address.Zipcode, new { @class = "input-xlarge text-tip" })
-                        <p class="help-block">
-                            @Html.ValidationMessageFor(model => model.Address.Zipcode)
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="span3">
-                <div class="editor-label">
-                    @Html.LabelFor(model => model.Title, "Title")
-                </div>
-                <div class="editor-field">
-                    @Html.EditorFor(model => model.Title)
-                    @Html.ValidationMessageFor(model => model.Title)
-                </div>
-                <div class="editor-label">
-                    @Html.LabelFor(model => model.FirstName, "First Name")
-                </div>
-                <div class="editor-field">
-                    @Html.EditorFor(model => model.FirstName)
-                    @Html.ValidationMessageFor(model => model.FirstName)
-                </div>
-                <div class="editor-label">
-                    @Html.LabelFor(model => model.LastName, "Last Name")
-                </div>
-                <div class="editor-field">
-                    @Html.EditorFor(model => model.LastName)
-                    @Html.ValidationMessageFor(model => model.LastName)
-                </div>
-                <div class="editor-label">
-                    @Html.LabelFor(model => model.DOB, "Birth Date")
-                </div>
-                <div class="editor-field dp">
-                    @Html.EditorFor(model => model.DOB)
-                    @Html.ValidationMessageFor(model => model.DOB)
-                </div>
-                @Html.HiddenFor(model => model.Date_Of_Joining, new { value = DateTime.Now.ToString("dd/MM/yyyy") })
-                @Html.ValidationMessageFor(model => model.Date_Of_Joining)
-                <div class="editor-label">
-                    @Html.LabelFor(model => model.Mobile_Number, "Mobile Number")
-                </div>
-                <div class="editor-field">
-                    @Html.EditorFor(model => model.Mobile_Number)
-                    @Html.ValidationMessageFor(model => model.Mobile_Number)
-                </div>
-                <div class="editor-label">
-                    @Html.LabelFor(model => model.Email, "Email")
-                </div>
-                <div class="editor-field">
-                    @Html.EditorFor(model => model.Email)
-                    @Html.ValidationMessageFor(model => model.Email)
-                </div>
-                <div class="editor-label">
-                    @Html.LabelFor(model => model.Tax_Type, "Tax Type")
-                </div>
-                <div class="editor-field">
-                    @Html.EditorFor(model => model.Tax_Type)
-                    @Html.ValidationMessageFor(model => model.Tax_Type)
-                </div>
-                <div class="editor-label">
-                    @Html.LabelFor(model => model.Tax_Number, "Tax Number")
-                </div>
-                <div class="editor-field">
-                    @Html.EditorFor(model => model.Tax_Number)
-                    @Html.ValidationMessageFor(model => model.Tax_Number)
-                </div>
-                <div class="editor-label">
-                    @Html.LabelFor(model => model.UserName, "User Name")
-                </div>
-                <div class="editor-field">
-                    @Html.EditorFor(model => model.UserName)
-                    @Html.ValidationMessageFor(model => model.UserName)
-                </div>
-            </div>
-            <div class="span6">
-                @Html.Partial("~/Views/Shared/Partial/_BranchListPartial.cshtml", (List<StormWeb.Models.Branch>)ViewBag.Branch)
-            </div>
-        </div>
-    </fieldset>
-    <p>
-        <button class="btn btn-primary btn-large pull-right" type="submit" value="Create &raquo;"
-            onclick="return $('#NewStaff').validate()">
-            Submit
-        </button>
-    </p> *@
+ 
 }
 <script type="text/javascript">
     $(function () {
@@ -352,20 +380,20 @@
             maxDate: '+10Y'
         });
     });
- 
-    function alphabets_only(e) { 
+
+    function alphabets_only(e) {
         var keycode;
         if (window.event) keycode = window.event.keyCode;
         else if (event) keycode = event.keyCode;
-        else if (e) keycode = e.which; 
+        else if (e) keycode = e.which;
         else return true;
-        if ((keycode >= 65 && keycode <= 90) || (keycode >= 97 && keycode <= 122) || keycode == 32) { 
+        if ((keycode >= 65 && keycode <= 90) || (keycode >= 97 && keycode <= 122) || keycode == 32) {
             return true;
         }
         else {
             alert("Allow only Characters");
             return false;
-        } 
+        }
         return true;
     }
 
@@ -375,7 +403,7 @@
         else if (event) keycode = event.keyCode;
         else if (e) keycode = e.which;
         else return true;
-        if ((keycode >= 48 && keycode <= 57)  || keycode == 32) {
+        if ((keycode >= 48 && keycode <= 57) || keycode == 32) {
             return true;
         }
         else {
