--- a/StormWeb/Views/StudentStaff/NewStudent.cshtml
+++ b/StormWeb/Views/StudentStaff/NewStudent.cshtml
@@ -34,12 +34,19 @@ $(function () {
 <div class="row-fluid">
     <div class="span12">
         <!-- Start of widget block -->
-        <div class="widget-block">
-            <div class="widget-content">
+         
+         <div class="box-tab"> 
+             <div class="page-header">
+                 <h1>
+                       &nbsp;&nbsp;Newly Registered Student
+                        
+                   </h1>
+                    </div>
+           @* <div class="widget-content">
                 <div class="widget-head">
                     <h5>
                         Newly Registered Student</h5>
-                </div>
+                </div>*@
                 <div class="widget-content">
                     <div class="widget-box" style="padding: 15px;">
                         <table class="data-tbl-simple table table-bordered dataTable">
@@ -95,7 +102,7 @@ $(function () {
                     </div>
                 </div>
             </div>
-        </div>
+         
     </div>
 </div>
 
