--- a/StormWeb/Views/Branch/Create.cshtml
+++ b/StormWeb/Views/Branch/Create.cshtml
@@ -1,16 +1,112 @@
 ﻿@model StormWeb.Models.Branch
 @{
     ViewBag.Title = "Create";
-}
-<h2>
-    Create</h2>
+} 
 <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
 @using (Html.BeginForm())
 {
     @Html.ValidationSummary(true)
-     
-    <table style="text-align: left;">
+    
+      <div class="form-horizontal well">
+    <fieldset style="margin-left: 50px;">
+        <legend>
+            <h2>
+                Create New Branch</h2>
+        </legend>
+        <div class="control-group">
+            @Html.Label("Branch Name", null, new { @class = "control-label form-required" })
+            <div class="controls">
+                @Html.EditorFor(model => model.Branch_Name, new { @class = "input-xlarge text-tip", placeholder = "Branch Name" })
+                <p class="help-block">
+                    @Html.ValidationMessageFor(model => model.Branch_Name)
+                </p>
+            </div>
+        </div>
+        <div class="control-group">
+                @Html.Label("Address Name", null, new { @class = "control-label form-required" })
+                <div class="controls">
+                    @Html.EditorFor(model => model.Address.Address_Name, new { @class = "input-xlarge text-tip", placeholder = "Address Name" })
+                    <p class="help-block">
+                        @Html.ValidationMessageFor(model => model.Address.Address_Name)
+                    </p>
+                </div>
+            </div>
+              <div class="control-group">
+                @Html.Label("City", null, new { @class = "control-label form-required" })
+                <div class="controls">
+                    @Html.EditorFor(model => model.Address.City, new { @class = "input-xlarge text-tip", placeholder = "City" })
+                    <p class="help-block">
+                        @Html.ValidationMessageFor(model => model.Address.City)
+                    </p>
+                </div>
+            </div>
+            <div class="control-group">
+                @Html.Label("State", null, new { @class = "control-label form-required" })
+                <div class="controls">
+                    @Html.EditorFor(model => model.Address.State, new { @class = "input-xlarge text-tip", placeholder = "State" })
+                    <p class="help-block">
+                        @Html.ValidationMessageFor(model => model.Address.State)
+                    </p>
+                </div>
+            </div>
+            <div class="control-group">
+                @Html.Label("Zipcode", null, new { @class = "control-label form-required" })
+                <div class="controls"> 
+                @Html.EditorFor(model => model.Address.Zipcode, new { @class = "input-xlarge text-tip", placeholder = "Zipcode" })
+                    
+                    <p class="help-block">
+                        @Html.ValidationMessageFor(model => model.Address.Zipcode)
+                    </p>
+                </div>
+            </div>
+            <div class="control-group">
+                @Html.Label("Country", null, new { @class = "control-label form-required" })
+                <div class="controls">
+                    @Html.DropDownListFor(model => model.Address.Country_Id, (IEnumerable<SelectListItem>)ViewBag.Country_Id, "--Select--", new { @class = "chzn-select" })
+                    <p class="help-block">
+                        @Html.ValidationMessageFor(model => model.Address.Zipcode)
+                    </p>
+                </div>
+            </div>
+              <div class="control-group">
+                @Html.Label("Primary Contact Number", null, new { @class = "control-label form-required", style = "width:200px;margin-left: -50px;" })
+                <div class="controls">
+                    @Html.EditorFor(model => model.Primary_Contact, new { @class = "input-xlarge text-tip", placeholder = "Primary Contact Number" })
+                    <p class="help-block">
+                        @Html.ValidationMessageFor(model => model.Primary_Contact)
+                    </p>
+                </div>
+            </div>
+             <div class="control-group">
+                @Html.Label("Secondary Contact Number", null, new { @class = "control-label form-required", style = "width:200px;margin-left: -50px;" })
+                <div class="controls">
+                    @Html.EditorFor(model => model.Secondary_Contact, new { @class = "input-xlarge text-tip", placeholder = "Secondary Contact" })
+                    <p class="help-block">
+                        @Html.ValidationMessageFor(model => model.Secondary_Contact)
+                    </p>
+                </div>
+            </div>
+             <div class="control-group">
+                @Html.Label("Email", null, new { @class = "control-label form-required" })
+                <div class="controls">
+                    @Html.EditorFor(model => model.Email, new { @class = "input-xlarge text-tip", placeholder = "Email" })
+                    <p class="help-block">
+                        @Html.ValidationMessageFor(model => model.Email)
+                    </p>
+                </div>
+            </div>
+            <div class="control-group">
+                
+                <div class="controls">
+                      <input type="submit" class="btn btn-primary" value="Create" />
+        @Html.Button_DeleteOrCancel("Cancel", "Index")
+                   
+                </div>
+            </div>
+    </fieldset>
+    </div> 
+  @*  <table style="text-align: left;">
         <tr>
             <th>
                 Branch Name
@@ -94,86 +190,11 @@
         </tr>
     </table>
     
-@* <div class="editor-label">
-            @Html.LabelFor(model => model.Address.Address_Id, "Address")
-        </div>
-        <div class="editor-field">
-            @Html.DropDownList("Address_Id", String.Empty)
-            @Html.ValidationMessageFor(model => model.Address.Address_Id)
-        </div>*@
-@*<div class="editor-label">
-        @Html.LabelFor(model => model.Branch_Name, "Branch Name")
-    </div>
-    <div class="editor-field">
-        @Html.EditorFor(model => model.Branch_Name)
-        @Html.ValidationMessageFor(model => model.Branch_Name)
-    </div>
-    <div class="editor-label">
-        @Html.LabelFor(model => model.Address.Address_Name, "Address")
-    </div>
-    <div class="editor-field">
-        @Html.EditorFor(model => model.Address.Address_Name)
-        @Html.ValidationMessageFor(model => model.Address.Address_Name)
-    </div>
-    <div class="editor-label">
-        @Html.LabelFor(model => model.Address.City, "City")
-    </div>
-    <div class="editor-field">
-        @Html.EditorFor(model => model.Address.City)
-        @Html.ValidationMessageFor(model => model.Address.City)
-    </div>
-    <div class="editor-label">
-        @Html.LabelFor(model => model.Address.State, "State")
-    </div>
-    <div class="editor-field">
-        @Html.EditorFor(model => model.Address.State)
-        @Html.ValidationMessageFor(model => model.Address.State)
-    </div>
-    <div class="editor-label">
-        @Html.LabelFor(model => model.Address.Zipcode, "Zipcode")
-    </div>
-    <div class="editor-field">
-        @Html.EditorFor(model => model.Address.Zipcode)
-        @Html.ValidationMessageFor(model => model.Address.Zipcode)
-    </div>
-    <div class="editor-label">
-        @Html.LabelFor(model => model.Address.Country_Id, "Country")
-    </div>
-    <div class="editor-field">
-        @Html.DropDownList("Country_Id", "-- Select One --")
-        @Html.ValidationMessageFor(model => model.Address.Country_Id)
-    </div>      
-    <div class="editor-label">
-        @Html.LabelFor(model => model.Primary_Contact, "Primary Contact No.")
-    </div>
-    <div class="editor-field">
-        @Html.EditorFor(model => model.Primary_Contact)
-        @Html.ValidationMessageFor(model => model.Primary_Contact)
-    </div>
-
-    <div class="editor-label">
-        @Html.LabelFor(model => model.Secondary_Contact, "Secondary Contact No.")
-    </div>
-    <div class="editor-field">
-        @Html.EditorFor(model => model.Secondary_Contact)
-        @Html.ValidationMessageFor(model => model.Secondary_Contact)
-    </div>
-
-    <div class="editor-label">
-        @Html.LabelFor(model => model.Email)
-    </div>
-    <div class="editor-field">
-        @Html.EditorFor(model => model.Email)
-        @Html.ValidationMessageFor(model => model.Email)
-    </div>
-*@
-    @*<p>
-        <input type="submit" value="Create" />
-    </p>*@ 
-     <div class="pull-left">
-        <input type="submit" class="btn btn-primary" value="Create"/>
-      @Html.Button_DeleteOrCancel("Cancel","Index") 
-    </div>
+ 
+    <div class="pull-left">
+        <input type="submit" class="btn btn-primary" value="Create" />
+        @Html.Button_DeleteOrCancel("Cancel", "Index")
+    </div>*@
 }
 @*<div>
     @Html.ActionLink("Back to List", "Index")
