--- a/StormWeb/Views/Branch/Index.cshtml
+++ b/StormWeb/Views/Branch/Index.cshtml
@@ -1,16 +1,18 @@
 ﻿@model IEnumerable<StormWeb.Models.Branch>
 @{
     ViewBag.Title = "Index";
-}
-<h2>
-    Branch</h2>
+} 
 <div class="row-fluid">
     <div class="span12">
-        <div class="widget-block">
-            <div class="widget-head">
+      @*  <div class="widget-block">*@
+            @*<div class="widget-head">
                 <h5>
                     Branch list</h5>
-            </div>
+            </div>*@
+               <div class="box-tab">
+                <div class="page-header">
+                 <h1> &nbsp;&nbsp;Branch List </h1>
+                   </div>
             <div class="widget-content">
                 <div class="widget-box" style="padding: 15px;">
                     <table class="data-tbl-simple table table-bordered dataTable">
