--- a/StormWeb/Views/Client/Index.cshtml
+++ b/StormWeb/Views/Client/Index.cshtml
@@ -28,11 +28,15 @@ $(function () {
 </script>
 
 <div class="row-fluid">
-     <div class="span12">        
-        <div class="widget-block">
-          <div class="widget-head">
+     <div class="span12"> 
+    @*  <div class="widget-block">       *@
+         <div class="box-tab">
+         <div class="page-header">
+                 <h1> &nbsp;&nbsp;Client List </h1>
+                   </div>
+         @* <div class="widget-head">
             <h5><i class="black-icons  documents"></i>Client List</h5>
-          </div>
+          </div>*@
         <div class="widget-content">
              <div class="widget-box" style="padding: 15px;">
                     <br />
