--- a/StormWeb/Views/Course/Edit.cshtml
+++ b/StormWeb/Views/Course/Edit.cshtml
@@ -2,8 +2,6 @@
 @{
     ViewBag.Title = "Edit";
 }
-<h2>
-    Edit</h2>
 <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
 <script type="text/javascript">
@@ -25,103 +23,84 @@
 {
     @Html.ValidationSummary(true, "Edit was unsuccessful. Please correct errors and try again")
     @Html.HiddenFor(model => model.Course_Id)
-    <table style="text-align: left;">
-        <tr>
-            <th>
-                University
-            </th>
-            <td>
-                <div class="control-group">
-                    <div class="controls">
-                        @Html.DropDownListFor(model => model.Faculty.University.University_Id, (IEnumerable<SelectListItem>)ViewBag.Universityddl, "--Select--", new { @class = "chzn-select" })
-                        @*  @Html.DropDownList("Faculty_Id", "--Select--") *@
-                        @Html.ValidationMessage("FacultyError")
+    <div class="form-horizontal well">
+        <fieldset style="margin-left:50px;">
+            <legend>
+                <h2>
+                    Add New University</h2>
+            </legend>
+            <div class="control-group">
+                @Html.Label("University", null, new { @class = "control-label form-required" })
+                <div class="controls">
+                    @Html.DropDownListFor(model => model.Faculty.University.University_Id, (IEnumerable<SelectListItem>)ViewBag.Universityddl, "--Select--", new { @class = "chzn-select" })
+                    @*  @Html.DropDownList("Faculty_Id", "--Select--") *@
+                    @Html.ValidationMessage("FacultyError")
+                </div>
+            </div>
+            <div class="control-group">
+                @Html.Label("Faculty", null, new { @class = "control-label form-required" })
+                <div class="controls">
+                    @Html.DropDownListFor(model => model.Faculty.Faculty_Id, (IEnumerable<SelectListItem>)ViewBag.Faculty_Id, "--Select--", new { @class = "chzn-select" })
+                    @*  @Html.DropDownList("Faculty_Id", "--Select--") *@
+                    @Html.ValidationMessage("FacultyError")
+                </div>
+            </div>
+            <div class="control-group">
+                @Html.Label("Course Level", null, new { @class = "control-label form-required" })
+                <div class="controls">
+                    @Html.DropDownListFor(model => model.Course_Level.Course_Level_Id, (IEnumerable<SelectListItem>)ViewBag.Course_Level_Id, "--Select--", new { @class = "chzn-select" })
+                    @*  @Html.DropDownList("Course_Level_Id", "--Select--") *@
+                    @Html.ValidationMessage("CourseLevelError")
+                </div>
+            </div>
+            <div class="control-group">
+                @Html.Label("Semester Commencement Date", null, new { @class = "control-label form-required", style = "width:250px;margin-left: -100px;" })
+                <div class="controls">
+                    <div class="input-append">
+                        @Html.TextBoxFor(model => model.Commence_Date_Sem, new { @readonly = "readonly", @class = "dp" })
+                        @Html.ValidationMessageFor(model => model.Commence_Date_Sem)
+                        @Html.ValidationMessage("DateError")
                     </div>
                 </div>
-            </td>
-        </tr>
-        <tr>
-            <th>
-                Faculty
-            </th>
-            <td>
-                <div class="control-group">
-                    <div class="controls">
-                        @Html.DropDownListFor(model => model.Faculty.Faculty_Id, (IEnumerable<SelectListItem>)ViewBag.Faculty_Id, "--Select--", new { @class = "chzn-select" })
-                        @*  @Html.DropDownList("Faculty_Id", "--Select--") *@
-                        @Html.ValidationMessage("FacultyError")
-                    </div>
+            </div>
+            <div class="control-group">
+                @Html.Label("Course Name", null, new { @class = "control-label form-required" })
+                <div class="controls">
+                    @Html.EditorFor(model => model.Course_Name)
+                    @Html.ValidationMessage("CourseNameError")
                 </div>
-            </td>
-        </tr>
-        <tr>
-            <th>
-                Course Level
-            </th>
-            <td>
-                <div class="control-group">
-                    <div class="controls">
-                        @Html.DropDownListFor(model => model.Course_Level.Course_Level_Id, (IEnumerable<SelectListItem>)ViewBag.Course_Level_Id, "--Select--", new { @class = "chzn-select" })
-                        @*  @Html.DropDownList("Course_Level_Id", "--Select--") *@
-                        @Html.ValidationMessage("CourseLevelError")
-                    </div>
+            </div>
+            <div class="control-group">
+                @Html.Label("Duration", null, new { @class = "control-label form-required" })
+                <div class="controls">
+                    @Html.EditorFor(model => model.Duration)
+                    @Html.ValidationMessageFor(model => model.Duration)
+                    @Html.ValidationMessage("DurationError")
                 </div>
-            </td>
-        </tr>
-        <tr>
-            <th>
-                Semester Commencement Date
-            </th>
-            <td>
-                <div class="input-append">
-                    @Html.TextBoxFor(model => model.Commence_Date_Sem, new { @readonly = "readonly", @class = "dp" })
-                    @Html.ValidationMessageFor(model => model.Commence_Date_Sem)
-                    @Html.ValidationMessage("DateError")
+            </div>
+            <div class="control-group">
+                @Html.Label("Total Course Fee", null, new { @class = "control-label form-required" })
+                <div class="controls">
+                    @Html.EditorFor(model => model.Fee)
+                    @Html.ValidationMessageFor(model => model.Fee)
+                    @Html.ValidationMessage("FeeError")
                 </div>
-            </td>
-        </tr>
-        <tr>
-            <th>
-                Course Name
-            </th>
-            <td>
-                @Html.EditorFor(model => model.Course_Name)
-                @Html.ValidationMessage("CourseNameError")
-            </td>
-        </tr>
-        <tr>
-            <th>
-                Duration
-            </th>
-            <td>
-                @Html.EditorFor(model => model.Duration)
-                @Html.ValidationMessageFor(model => model.Duration)
-                @Html.ValidationMessage("DurationError")
-            </td>
-        </tr>
-        <tr>
-            <th>
-                Total Course Fee
-            </th>
-            <td>@Html.EditorFor(model => model.Fee)
-                @Html.ValidationMessageFor(model => model.Fee)
-                @Html.ValidationMessage("FeeError")
-            </td>
-        </tr>
-        <tr>
-            <th>
-                Description
-            </th>
-            <td>
-                @Html.EditorFor(model => model.Description)
-                @Html.ValidationMessageFor(model => model.Description)
-            </td>
-        </tr>
-    </table>
-     
-    <p>
-        <input type="submit" value="Save Changes" class="btn btn-primary" />
+            </div>
+            <div class="control-group">
+                @Html.Label("Description", null, new { @class = "control-label form-required" })
+                <div class="controls">
+                    @Html.EditorFor(model => model.Description)
+                    @Html.ValidationMessageFor(model => model.Description)
+                </div>
+            </div>
+            <div class="control-group">
+                <div class="controls">
+                 <input type="submit" value="Save Changes" class="btn btn-primary" />
         <a href="@Url.Action("ViewCourses", "Course", new { id = ViewBag.UniversityId })" class="btn btn-danger">
             Cancel</a>
-    </p> 
+                </div>
+            </div>
+        </fieldset>
+    </div>
+  
 }
