--- a/StormWeb/Views/Course/List.cshtml
+++ b/StormWeb/Views/Course/List.cshtml
@@ -5,12 +5,16 @@
 } 
 <div class="row-fluid">
     <div class="span12">
-        <div class="widget-block">
+       @* <div class="widget-block">
             <div class="widget-head">
                 <h5>
                     Course list</h5>
                 
-            </div>
+            </div>*@
+              <div class="box-tab">
+              <div class="page-header">
+                 <h1> &nbsp;&nbsp;Course List </h1>
+                   </div>
             <div class="widget-content">
                <div class="widget-box" style="padding: 15px;"> 
                       <table class="data-tbl-simple table table-bordered dataTable">
