--- a/StormWeb/Views/Document/ShowAllDocumentTemplates.cshtml
+++ b/StormWeb/Views/Document/ShowAllDocumentTemplates.cshtml
@@ -38,11 +38,18 @@ $(function () {
 
 <div class="row-fluid">
     <div class="span12">
-        <div class="widget-block">
+      @*  <div class="widget-block">
             <div class="widget-head">
                 <h5>
                     <i class="black-icons  documents"></i>Application Forms</h5>
-            </div>
+            </div>*@
+             <div class="box-tab"> 
+             <div class="page-header">
+                 <h1>
+                       &nbsp;&nbsp;Application Forms
+                        
+                   </h1>
+                    </div>
             <div class="widget-content">
                 <div class="widget-box" style="padding: 15px;">
                      <table class="data-tbl-simple table table-bordered dataTable">
