--- a/StormWeb/Views/Document/ShowGeneralTemplates.cshtml
+++ b/StormWeb/Views/Document/ShowGeneralTemplates.cshtml
@@ -38,11 +38,18 @@
 
     <div class="row-fluid">
         <div class="span12">
-            <div class="widget-block">
+          @*  <div class="widget-block">
                 <div class="widget-head">
                     <h5> General Document Templates
                     </h5>
-                </div>
+                </div>*@
+                 <div class="box-tab"> 
+             <div class="page-header">
+                 <h1>
+                       &nbsp;&nbsp;General Document Templates
+                        
+                   </h1>
+                    </div>
                 <div class="widget-content">
                     <div class="widget-box">
                       <div class="widget-box" style="padding: 15px;"> 
