--- a/StormWeb/Views/Staff/Details.cshtml
+++ b/StormWeb/Views/Staff/Details.cshtml
@@ -4,11 +4,18 @@
 }
 <div class="row-fluid">
     <div class="span12">
-        <div class="widget-block">
+     @*   <div class="widget-block">
             <div class="widget-head">
                 <h2>
                     Staff Details</h2>
-            </div>
+            </div>*@
+              <div class="box-tab"> 
+             <div class="page-header">
+                 <h1>
+                       &nbsp;&nbsp;Staff Details
+                        
+                   </h1>
+                    </div>
             <div class="widget-content">
                 <div class="widget-box">
                     <br />
