--- a/StormWeb/Views/StudentStaff/Index.cshtml
+++ b/StormWeb/Views/StudentStaff/Index.cshtml
@@ -28,11 +28,18 @@ $(function () {
 </script>
 
 <div class="row-fluid">
-    <div class="span12">        
-        <div class="widget-block">
+    <div class="span12"> 
+     <div class="box-tab"> 
+             <div class="page-header">
+                 <h1>
+                       &nbsp;&nbsp;My Students
+                        
+                   </h1>
+                    </div>       
+      @*  <div class="widget-block">
           <div class="widget-head">
             <h5><i class="black-icons  documents"></i> My Students </h5>
-          </div>
+          </div>*@
           <div class="widget-content">
             <div class="widget-box" style="padding: 15px;"> 
                <table class="data-tbl-simple table table-bordered dataTable">
