--- a/StormWeb/Views/University/Create.cshtml
+++ b/StormWeb/Views/University/Create.cshtml
@@ -1,66 +1,77 @@
 ﻿@model StormWeb.Models.University
-
 @{
     ViewBag.Title = "Create";
 }
-
-<h2>Create</h2>
-
 <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
-
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.ValidationSummary(true)
-    <fieldset>
-        <legend>University</legend>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Country_Id, "Country")
-        </div>
-        <div class="editor-field">
-            @Html.DropDownList("Country_Id", "-- Select One --")           
-            @Html.ValidationMessageFor(model => model.Country_Id)
-            @Html.ValidationMessage("CountryError")
-        </div>      
-        <div class="editor-label">
-            @Html.LabelFor(model => model.University_Name,"University Name")
-        </div>
-        <div class="editor-field">
-            @Html.TextBoxFor(model => model.University_Name)
-           @Html.ValidationMessageFor(model => model.University_Name) 
-              @Html.ValidationMessage("UniversityError")          
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Campus)
-        </div>
-        <div class="editor-field">
-            @Html.TextBoxFor(model => model.Campus)
-            @Html.ValidationMessageFor(model => model.Campus)
-           @Html.ValidationMessage("CampusError")   
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Email)
-        </div>
-        <div class="editor-field">
-            @Html.TextBoxFor(model => model.Email)
-            @Html.ValidationMessageFor(model => model.Email)
-           @Html.ValidationMessage("EmailError")   
-        </div>
-        <div class="control-group">
-			<label class="control-label">Description</label>
-			<div class="controls">
-                @Html.TextAreaFor(model => model.Description, new { @class = "span11", rows = "10", cols = "10", id = "inbox-editor" })												
-			</div>                                            
-		</div>
-
-        <p>
-        @* <a class='btn btn-info'  title="Create">Create</a>*@
-            <input type="submit" value="Create" class="btn btn-primary"/>
-             @Html.Button_DeleteOrCancel("Cancel", "Index")
-        </p>
-    </fieldset>
+   
+    <div class="form-horizontal well">
+        <fieldset>
+            <legend>
+                <h2>
+                    Add New University</h2>
+            </legend>
+            <div class="control-group">
+                @Html.Label("Country", null, new { @class = "control-label form-required" })
+                @*  @Html.LabelFor(model => model.Country_Id, "Country")*@
+                <div class="controls">
+                    @Html.DropDownListFor(model => model.Country.Country_Id, (IEnumerable<SelectListItem>)ViewBag.Country_Id, "--Select--", new { @class = "chzn-select" })
+                    <p class="help-block">
+                        @Html.ValidationMessageFor(model => model.Country_Id)
+                        @Html.ValidationMessage("CountryError")
+                    </p>
+                </div>
+            </div>
+            <div class="control-group">
+                @* @Html.LabelFor(model => model.University_Name, "University Name")*@
+                @Html.Label("University Name", null, new { @class = "control-label form-required" })
+                <div class="controls">
+                    @Html.TextBoxFor(model => model.University_Name, new { @class = "input-large text-tip", placeholder = "GivenName" })
+                    <p class="help-block">
+                        @Html.ValidationMessageFor(model => model.University_Name)
+                        @Html.ValidationMessage("UniversityError")
+                    </p>
+                </div>
+            </div>
+            <div class="control-group">
+                @*@Html.LabelFor(model => model.Campus)*@
+                @Html.Label("Campus", null, new { @class = "control-label form-required" })
+                <div class="controls">
+                    @Html.TextBoxFor(model => model.Campus, new { @class = "input-large text-tip", placeholder = "Campus" })
+                    <p class="help-block">
+                        @Html.ValidationMessageFor(model => model.Campus)
+                        @Html.ValidationMessage("CampusError")
+                    </p>
+                </div>
+            </div>
+            <div class="control-group">
+                @*   @Html.LabelFor(model => model.Email)*@
+                @Html.Label("Email", null, new { @class = "control-label form-required" })
+                <div class="controls">
+                    @Html.TextBoxFor(model => model.Email, new { @class = "input-large text-tip", placeholder = "Email" })
+                    <p class="help-block">
+                        @Html.ValidationMessageFor(model => model.Email)
+                        @Html.ValidationMessage("EmailError")
+                    </p>
+                </div>
+            </div>
+            <div class="control-group">
+                @Html.Label("Description", null, new { @class = "control-label form-required" })
+                @* <label class="control-label">
+                    Description</label>*@
+                <div class="controls">
+                    @Html.TextAreaFor(model => model.Description, new { @class = "span11", rows = "10", cols = "10", id = "inbox-editor" })
+                </div>
+            </div>
+            <div class="control-group">
+                <div class="controls">
+                    <input type="submit" value="Create" class="btn btn-primary" />
+                    @Html.Button_DeleteOrCancel("Cancel", "Index")
+                </div>
+            </div>
+        </fieldset>
+    </div>
 }
- 
