--- a/StormWeb/Views/University/CreateFaculty.cshtml
+++ b/StormWeb/Views/University/CreateFaculty.cshtml
@@ -1,74 +1,126 @@
 ﻿@model StormWeb.Models.Faculty
-
 @{
     ViewBag.Title = "CreateFaculty";
 }
-
 @using StormWeb.Helper
-
-<h2>CreateFaculty</h2>
-
+ 
 <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
-
-@using (Html.BeginForm("CreateFaculty", "University", FormMethod.Post, new { @class = "form-horizontal well", id = "appointmentForm" }))
+@using (Html.BeginForm("CreateFaculty", "University", FormMethod.Post, new { id = "appointmentForm" }))
 {
     @Html.ValidationSummary(false)
-    <fieldset>
-        <legend>Faculty</legend>
-       @Html.HiddenFor(model => model.University_Id)
+     
+    @Html.HiddenFor(model => model.University_Id)
        
-        <div class="editor-label">
-            @Html.Label("Faculty Name")
-        </div>
-        <div class="editor-field">
-            @Html.TextBoxFor(model => model.Faculty_Name)
-            @Html.ValidationMessageFor(model => model.Faculty_Name)
-        </div>
+    <div class="form-horizontal well">
+        <fieldset style="margin-left: 50px;">
+            <legend>
+                <h2>
+                    Add New Faculty</h2>
+            </legend>
+            <div class="control-group">
+                @Html.Label("Faculty Name", null, new { @class = "control-label form-required" })
+                <div class="controls">
+                    @Html.TextBoxFor(model => model.Faculty_Name, new { @class = "input-large text-tip", placeholder = "Faculty Name" })
+                    <p class="help-block">
+                        @Html.ValidationMessageFor(model => model.Faculty_Name)</p>
+                </div>
+            </div>
+            <div class="control-group">
+                @Html.Label("Faculty Description", null, new { @class = "control-label form-required" })
+                <div class="controls">
+                    @Html.TextBoxFor(model => model.Faculty_Description, new { @class = "input-large text-tip", placeholder = "Faculty Description" })
+                    <p class="help-block">
+                        @Html.ValidationMessageFor(model => model.Faculty_Description)</p>
+                </div>
+            </div>
+            <div class="control-group">
+                @Html.Label("Campus", null, new { @class = "control-label form-required" })
+                <div class="controls">
+                    @{  string u = "";
+                        string c = "";
+                        int i = 0;
+                        var item = (StormWeb.Models.University)ViewBag.UniId;
+                        u = item.University_Name;
+                        c = item.Campus;
+                        i = item.University_Id;
+                    }
+                    @Html.TextBox("Campus", @c, new { @readonly = "readonly", @class = "input-large text-tip", placeholder = "Campus" })
+                    <p class="help-block">
+                        @Html.ValidationMessageFor(model => model.University.Campus)
+                    </p>
+                </div>
+                <div class="control-group">
+                    @Html.Label("University", null, new { @class = "control-label form-required" })
+                    <div class="controls">
+                        @Html.TextBox("University_Name", @u, new { @readonly = "readonly", @class = "input-large text-tip", placeholder = "University" })
+                        <p class="help-block">
+                            @Html.ValidationMessageFor(model => model.University.University_Name)
+                        </p>
+                    </div>
+                </div>
+                <div class="control-group">
+                    <div class="controls">
+                        <input type="submit" value="Create" class="btn btn-primary" />
+                        @Html.Button_DeleteOrCancel("Cancel", "Index")
+                    </div>
+                </div>
+            </div>
+        </fieldset>
+    </div>
+@*   
+    <div class="editor-label">
+        @Html.Label("Faculty Name")
+    </div>
+    <div class="editor-field">
+        @Html.TextBoxFor(model => model.Faculty_Name)
+        @Html.ValidationMessageFor(model => model.Faculty_Name)
+    </div>
 
-        <div class="editor-label">
-            @Html.Label("Faculty Description")
-        </div>
-        <div class="editor-field">
-            @Html.TextBoxFor(model => model.Faculty_Description)
-            @Html.ValidationMessageFor(model => model.Faculty_Description)
-        </div>
+    <div class="editor-label">
+        @Html.Label("Faculty Description")
+    </div>
+    <div class="editor-field">
+        @Html.TextBoxFor(model => model.Faculty_Description)
+        @Html.ValidationMessageFor(model => model.Faculty_Description)
+    </div>
 
-        <div class="editor-label">
-            @Html.Label("Campus")
-        </div>
-        @{
-            string u = "";
-            string c = "";
-            int i = 0;
-            var item = (StormWeb.Models.University)ViewBag.UniId;
-            u = item.University_Name;
-            c = item.Campus;
-            i = item.University_Id;
-        <div class="editor-field">             
-            @Html.TextBox("Campus",@c,new{@readonly="readonly"})
-            @Html.ValidationMessageFor(model => model.University.Campus)
-        </div>
+    <div class="editor-label">
+        @Html.Label("Campus")
+    </div>
+         
+   string u = "";
+   string c = "";
+   int i = 0;
+   var item = (StormWeb.Models.University)ViewBag.UniId;
+   u = item.University_Name;
+   c = item.Campus;
+   i = item.University_Id;
+    <div class="editor-field">
+        @Html.TextBox("Campus", @c, new { @readonly = "readonly" })
+        @Html.ValidationMessageFor(model => model.University.Campus)
+    </div>
 
-        <div class="editor-label">
-            @Html.Label("University")
-        </div>
-        <div class="editor-field">
-            
-            @Html.TextBox("University_Name", @u, new { @readonly = "readonly" })
-            @Html.ValidationMessageFor(model => model.University.University_Name)
-        </div> 
+    <div class="editor-label">
+        @Html.Label("University")
+    </div>
+    <div class="editor-field">
+        @Html.TextBox("University_Name", @u, new { @readonly = "readonly" })
+        @Html.ValidationMessageFor(model => model.University.University_Name)
+    </div> 
 
-        @Html.HiddenFor(model => model.University_Id);
-       }
-        <p>
-            <input type="submit" value="Create" />
-        </p
-            
-    </fieldset>
+    @Html.HiddenFor(model => model.University_Id);
+      
+    <br />
+    <p>
+        <input type="submit" value="Create" class="btn btn-primary" />
+        @* @Html.ActionLink("Back to List", "Index")
+        @Html.Button_DeleteOrCancel("Cancel", "Index")
+    </p>
+            *@
+ 
              
 }
-
 <script>
     $(function () {
         
@@ -79,7 +131,3 @@
     });
 
 </script>
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
