--- a/StormWeb/Views/University/Faculties.cshtml
+++ b/StormWeb/Views/University/Faculties.cshtml
@@ -45,11 +45,18 @@ $(function () {
 </script> 
 <div class="row-fluid">
     <div class="span12">
-        <div class="widget-block">
+       @* <div class="widget-block">
             <div class="widget-head">
                 <h5>
                     Faculties List</h5>
-            </div>
+            </div>*@
+             <div class="box-tab"> 
+             <div class="page-header">
+                 <h1>
+                       &nbsp;&nbsp;Faculties List
+                        
+                   </h1>
+                    </div>
             <div class="widget-content">
                 <div class="widget-box" style="padding: 15px;">
                     <table class="data-tbl-simple table table-bordered dataTable">
