--- a/StormWeb/Views/University/Index.cshtml
+++ b/StormWeb/Views/University/Index.cshtml
@@ -9,11 +9,18 @@
 </script>
 <div class="row-fluid">
     <div class="span12">
-        <div class="widget-block">
+     <div class="box-tab"> 
+             <div class="page-header">
+                 <h1>
+                       &nbsp;&nbsp;University List
+                        
+                   </h1>
+                    </div>
+  @*      <div class="widget-block">
             <div class="widget-head">
                 <h5>
                     <i class="black-icons  documents"></i>University List</h5>
-            </div>
+            </div>*@
             <div class="widget-content">
                 <div class="widget-box" style="padding: 15px;"> 
                     <table class="data-tbl-simple table table-bordered dataTable">
